--- a/index.html
+++ b/index.html
@@ -45,13 +45,17 @@ body {font-family: Arial;}
 </head>
 <body>
 
-<h2>Tabs</h2>
-<p>Click on the buttons inside the tabbed menu:</p>
+<h2>Chengappa Thumisi</h2>
+<p>Business ventures</p>
 
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'London')">London</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+  <button class="tablinks" onclick="openCity(event, 'London')">Marketing</button>
+  <button class="tablinks" onclick="openCity(event, 'Paris')">Services</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Products</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Clients</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Completed projects</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">On going Projects</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Contact</button>
 </div>
 
 <div id="London" class="tabcontent">
@@ -68,7 +72,22 @@ body {font-family: Arial;}
   <h3>Tokyo</h3>
   <p>Tokyo is the capital of Japan.</p>
 </div>
-
+<div id="Tokyo" class="tabcontent">
+  <h3>Tokyo</h3>
+  <p>Tokyo is the capital of Japan1.</p>
+</div>
+  <div id="Tokyo" class="tabcontent">
+  <h3>Tokyo</h3>
+  <p>Tokyo is the capital of Japan2.</p>
+</div>
+  <div id="Tokyo" class="tabcontent">
+  <h3>Tokyo</h3>
+  <p>Tokyo is the capital of Japan3.</p>
+</div>
+  <div id="Tokyo" class="tabcontent">
+  <h3>Tokyo</h3>
+  <p>Tokyo is the capital of Japan4.</p>
+</div>
 <script>
 function openCity(evt, cityName) {
   var i, tabcontent, tablinks;
