--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@ body {font-family: Arial;}
 <p>Business ventures</p>
 
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'London')">Marketing</button>
+  <button class="tablinks" onclick="openCity(event, 'Marketing')">Marketing</button>
   <button class="tablinks" onclick="openCity(event, 'Paris')">Services</button>
   <button class="tablinks" onclick="openCity(event, 'Tokyo')">Products</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Clients</button>
+  <button class="tablinks" onclick="openCity(event, 'Clients')">Clients</button>
   <button class="tablinks" onclick="openCity(event, 'Tokyo')">Completed projects</button>
   <button class="tablinks" onclick="openCity(event, 'Tokyo')">On going Projects</button>
   <button class="tablinks" onclick="openCity(event, 'Tokyo')">Contact</button>
 </div>
 
 <div id="London" class="tabcontent">
-  <h3>London</h3>
-  <p>London is the capital city of England.</p>
+  <h3>Marketing</h3>
+  <p>Digital marketing Solutions</p>
 </div>
 
 <div id="Paris" class="tabcontent">
