--- a/index.html
+++ b/index.html
@@ -1,109 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial;}
-
-/* Style the tab */
-.tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 17px;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-  display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
-}
-</style>
-</head>
 <body>
 
-<h2>Chengappa Thumisi</h2>
-<p>Business ventures</p>
+<p style="color:red">T. Chengappa</p>
+<p style="color:blue">Personal Website</p>
 
-<div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'Marketing')">Marketing</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Services</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Products</button>
-  <button class="tablinks" onclick="openCity(event, 'Clients')">Clients</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Completed projects</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">On going Projects</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Contact</button>
-</div>
-
-<div id="London" class="tabcontent">
-  <h3>Marketing</h3>
-  <p>Digital marketing Solutions</p>
-</div>
-
-<div id="Paris" class="tabcontent">
-  <h3>Paris</h3>
-  <p>Paris is the capital of France.</p> 
-</div>
-
-<div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan.</p>
-</div>
-<div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan1.</p>
-</div>
-  <div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan2.</p>
-</div>
-  <div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan3.</p>
-</div>
-  <div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan4.</p>
-</div>
-<script>
-function openCity(evt, cityName) {
-  var i, tabcontent, tablinks;
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" active", "");
-  }
-  document.getElementById(cityName).style.display = "block";
-  evt.currentTarget.className += " active";
-}
-</script>
-   
 </body>
-</html> 
-
+</html>
