--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<p style="color:red">T. Chengappa</p>
+<p style="color:green">T. Chengappa</p>
 <p style="color:blue">Personal Website</p>
 
 </body>
