--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<p style="color:green">T. Chengappa</p>
-<p style="color:blue">Personal Website</p>
+<center><b><p style="color:green">T. Chengappa</p></b></center>
+<center><p style="color:blue">Personal Website</p></center>
 
 </body>
 </html>
