--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <center><b><p style="color:green">T. Chengappa</p></b></center>
 <center><p style="color:blue">Personal Website</p></center>
+  <img src="CT.jpg" alt="chengappathumisi" width="500" height="333">
 
 </body>
 </html>
