--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <center><b><p style="color:green">T. Chengappa</p></b></center>
 <center><p style="color:blue">Personal Website</p></center>
-  <img src="data/CT.jpg" alt="chengappathumisi" width="500" height="333">
+  <center><img src="data/CT.jpg" alt="chengappathumisi" width="250" height="250"><center>
 
 </body>
 </html>
