--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <body>
 
 <center><b><p style="color:green">T. Chengappa</p></b></center>
-<center><p style="color:blue">Personal Website</p></center>
+
   <center><img src="data/CT.jpg" alt="chengappathumisi" width="250" height="250"><center>
+    <center><p style="color:blue">Curriculum Vitae</p></center>
 
 </body>
 </html>
