--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <center><b><p style="color:green">T. Chengappa</p></b></center>
 
   <center><img src="data/CT.jpg" alt="chengappathumisi" width="250" height="250"><center>
-    <center><p style="color:blue">Curriculum Vitae</p></center><center>I<p style="color:blue">Books</p></center>I<center><p style="color:blue">Notes</p></center>I 
+    <center><p style="color:blue">Curriculum Vitae</p></center><center><p style="color:blue">Books</p></center><center><p style="color:blue">Notes</p></center> 
 
 </body>
 </html>
