--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 <center><b><p style="color:green">T. Chengappa</p></b></center>
 
   <center><img src="data/CT.jpg" alt="chengappathumisi" width="250" height="250"><center>
-    <center><p style="color:blue">Curriculum Vitae</p></center><center><p style="color:blue">Books</p></center><center><p style="color:blue">Notes</p></center> 
+   <h1 style="background-color:DodgerBlue;">About Me</h1>
+
+<p style="background-color:Tomato;">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+</p> 
 
 </body>
 </html>
