--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <center><b><p style="color:green">T. Chengappa</p></b></center>
 
   <center><img src="data/CT.jpg" alt="chengappathumisi" width="250" height="250"><center>
-  <left> <h1 style="background-color:DodgerBlue;">About Me</h1></left>
+  <left> <h1 style="background-color:White;">About Me</h1></left>
 
 <p style="background-color:White;">
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
