--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <center><img src="data/CT.jpg" alt="chengappathumisi" width="250" height="250"><center>
   <left> <h1 style="background-color:White;">About Me</h1></left>
 
-<p style="background-color:White;">
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+<p style="background-color:yellow;">
+I am Chengappa Thumisi
 </p> 
 
 </body>
