--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<center><b><p style="color:green">T. Chengappa</p></b></center>
+<left><b><p style="color:green">T. Chengappa</p></b></left>
 
-  <center><img src="data/CT.jpg" alt="chengappathumisi" width="250" height="250"><center>
+  <left><img src="data/CT.jpg" alt="chengappathumisi" width="250" height="250"><left>
   <left> <h1 style="background-color:White;">About Me</h1></left>
 
 <p style="background-color:yellow;">
