--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
 <body>
 
-<left><b><p style="color:green">T. Chengappa</p></b></left>
+ <left><img src="data/CT.jpg" alt="chengappathumisi" width="250" height="250"><left>
+  <left> <h1 style="background-color:White;">T. Chengappa</h1></left>
 
-  <left><img src="data/CT.jpg" alt="chengappathumisi" width="250" height="250"><left>
-  <left> <h1 style="background-color:White;">About Me</h1></left>
-
-<p style="background-color:yellow;">
+<p style="background-color:White;">
 I am Chengappa Thumisi
 </p> 
 
