--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <left> <h1 style="background-color:White;">T. Chengappa</h1></left>
 
 <p style="background-color:White;">
-I am Chengappa Thumisi
+[Your Name] – A Journey of Passion, Expertise, and Innovation
+
+Welcome to my personal space! I’m [Your Name], a [your profession or passion] driven by a relentless curiosity and a commitment to excellence. Whether you’re here to learn more about my work, gain insights into my journey, or simply connect, I’m excited to share my story with you.
 </p> 
 
 </body>
