--- a/index.html
+++ b/index.html
@@ -6,56 +6,9 @@
   <left> <h1 style="background-color:White;">T. Chengappa</h1></left>
 
 <p style="background-color:White;">
-CT – A Journey of Passion, Expertise, and Innovation
+Curriculum vitae
 
-Welcome to my personal space! I’m Chengappa Thumisi, i am an enterprenuer driven by a relentless curiosity and a commitment to excellence. Whether you’re here to learn more about my work, gain insights into my journey, or simply connect, I’m excited to share my story with you.
-[Your Name] – A Journey of Passion, Expertise, and Innovation
-
-Welcome to my personal space! I’m [Your Name], a [your profession or passion] driven by a relentless curiosity and a commitment to excellence. Whether you’re here to learn more about my work, gain insights into my journey, or simply connect, I’m excited to share my story with you.
-
-Early Life and Inspiration
-
-Every journey has a beginning, and mine started in [your birthplace or early influences]. From a young age, I was fascinated by [your field of interest], always eager to explore, learn, and create. Whether it was [anecdote about an early passion or project], I knew that my future would be shaped by my love for [your industry].
-
-As I grew, this passion only deepened. I found myself drawn to [specific experiences or education], leading me to pursue [academic background, training, or early career experiences]. These formative years set the stage for what would become an exciting and fulfilling career.
-
-Education and Skill Development
-
-My academic journey took me to [name of university or institution], where I studied [your major or specialization]. During this time, I honed my skills in [relevant subjects or disciplines], gaining both theoretical knowledge and hands-on experience. Beyond the classroom, I immersed myself in [internships, extracurricular activities, or personal projects], further solidifying my expertise.
-
-Learning, however, never stops. Over the years, I have continuously sought to expand my knowledge by attending workshops, obtaining certifications, and staying updated with industry trends. This commitment to growth has allowed me to adapt to the ever-changing landscape of [your industry] and provide cutting-edge solutions to complex challenges.
-
-Professional Journey and Achievements
-
-My professional career began with [your first job or significant early experience]. Here, I had the opportunity to [describe key responsibilities and accomplishments]. This experience was invaluable, teaching me the ins and outs of [industry or profession] and shaping my approach to problem-solving.
-
-From there, I moved on to [subsequent roles or entrepreneurial ventures], each one adding new layers of expertise and perspective. Whether it was [mention significant projects, breakthroughs, or collaborations], I have always strived to push the boundaries of what is possible.
-
-Some of my most rewarding achievements include:
-
-[Award, recognition, or milestone]
-
-[Notable project or initiative]
-
-[Impactful contribution to the industry or community]
-
-Philosophy and Approach
-
-At the core of my work lies a simple yet powerful philosophy: [your guiding principle or belief]. I believe that true success is not just about technical skills but also about [mention values such as creativity, integrity, collaboration, or innovation].
-
-This mindset has driven me to approach every challenge with enthusiasm and determination. Whether I’m working on [specific type of work], mentoring aspiring professionals, or developing new strategies, my goal is always to create meaningful and lasting impact.
-
-Personal Interests and Hobbies
-
-Beyond my professional life, I have a deep appreciation for [personal interests or hobbies]. Whether it’s [mention hobbies such as travel, music, sports, or reading], these activities keep me inspired and allow me to bring fresh perspectives to my work.
-
-Additionally, I’m passionate about giving back to the community. Through [volunteering, mentorship, or advocacy], I aim to make a difference and contribute to causes that matter to me.
-
-Let’s Connect
-
-I’m always open to new opportunities, collaborations, and meaningful conversations. Whether you’re interested in working together, exchanging ideas, or simply saying hello, feel free to reach out!
-
-Thank you for visiting, and I look forward to connecting with you soon.</p> 
+</p> 
 
 </body>
 </html>
