--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
  <left><img src="data/CT1.png" alt="chengappathumisi" width="350" height="350"><left>
-  <left> <h1 style="background-color:White;">T. Chengappa</h1></left>
+  <left> <h1 style="background-color:White;">T. Chengappa - Personal Page</h1></left>
 
 <p style="background-color:White;">
 Curriculum vitae
