--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
-<!DOCTYPE html>
-<html>
+html>
+
+<head>
+<meta charset="utf-8">
+<meta http-equiv="Content-Language" content="en-us">
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<title>T</title>
+</head>
+
 <body>
 
-<p style="color:Black">T. Chengappa</p>
-<p style="color:blue">personal Website</p>
+			<p align="center">
+			<font color="#0000FF">
+			<b style="font-weight: normal" id="docs-internal-guid-bad665c8-7fff-7914-00f7-e3624df0b0f16">
+			<img border="0" src="images/CT.jpeg" width="224" height="225" align="middle"></b></font></p>
+<b style="font-weight: normal" id="docs-internal-guid-bad665c8-7fff-7914-00f7-e3624df0b0f17">
+<b style="font-weight: normal" id="docs-internal-guid-bad665c8-7fff-7914-00f7-e3624df0b0f18">
+<p style="margin-top: 0; margin-bottom: 2px" align="center"><b>
+			<font face="Consolas" size="4" color="#0000FF">T. Chengappa</font></b></p>
+			<p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="center">
+			<font face="Consolas">E-mail:
+			chengappathumisi@gmail.com</font><p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="center">
+			<font face="Consolas">Mob.No:+91-9177466875, +91-83319-16875</font><p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="center">
+			<font face="Consolas">Personal Webpage: 
+			<a href="https://digitalct.github.io/">https://digitalct.github.io/</a></font></b></b><p style="margin-top: 0; margin-bottom: 2px">
+<b><font face="Consolas" color="#0000FF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</font></b></p>
+<p style="margin-top: 0; margin-bottom: 2px">
+<font face="Consolas" color="#0000FF"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</b></font></p>
+<p style="margin-top: 0; margin-bottom: 2px">&nbsp;</p>
 
 </body>
+
 </html>
