--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-html>
+<html>
 
 <head>
 <meta charset="utf-8">
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>T</title>
+<title>CT</title>
 </head>
 
 <body>
