--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 
 <body>
 
-			<p align="center">
+			<p align="left">
 			<font color="#0000FF">
 			<b style="font-weight: normal" id="docs-internal-guid-bad665c8-7fff-7914-00f7-e3624df0b0f16">
 			<img border="0" src="images/CT.jpeg" width="224" height="225" align="middle"></b></font></p>
 <b style="font-weight: normal" id="docs-internal-guid-bad665c8-7fff-7914-00f7-e3624df0b0f17">
 <b style="font-weight: normal" id="docs-internal-guid-bad665c8-7fff-7914-00f7-e3624df0b0f18">
-<p style="margin-top: 0; margin-bottom: 2px" align="center"><b>
+<p style="margin-top: 0; margin-bottom: 2px" align="left"><b>
 			<font face="Consolas" size="4" color="#0000FF">T. Chengappa</font></b></p>
-			<p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="center">
+			<p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="left">
 			<font face="Consolas">E-mail:
-			chengappathumisi@gmail.com</font><p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="center">
+			chengappathumisi@gmail.com</font><p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="left">
 			<font face="Consolas">Mob.No:+91-9177466875, +91-83319-16875</font><p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="center">
 			<font face="Consolas">Personal Webpage: 
 			<a href="https://digitalct.github.io/">https://digitalct.github.io/</a></font></b></b><p style="margin-top: 0; margin-bottom: 2px">
