--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="left">
 			<font face="Consolas">E-mail:
 			chengappathumisi@gmail.com</font><p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="left">
-			<font face="Consolas">Mob.No:+91-9177466875, +91-83319-16875</font><p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="center">
+			<font face="Consolas">Mob.No:+91-9177466875, +91-83319-16875</font><p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="left">
 			<font face="Consolas">Personal Webpage: 
 			<a href="https://digitalct.github.io/">https://digitalct.github.io/</a></font></b></b><p style="margin-top: 0; margin-bottom: 2px">
 <b><font face="Consolas" color="#0000FF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
