--- a/index.html
+++ b/index.html
@@ -16,18 +16,35 @@
 <b style="font-weight: normal" id="docs-internal-guid-bad665c8-7fff-7914-00f7-e3624df0b0f17">
 <b style="font-weight: normal" id="docs-internal-guid-bad665c8-7fff-7914-00f7-e3624df0b0f18">
 <p style="margin-top: 0; margin-bottom: 2px" align="left"><b>
-			<font face="Consolas" size="4" color="#0000FF">T. Chengappa</font></b></p>
-			<p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="left">
-			<font face="Consolas">E-mail:
-			chengappathumisi@gmail.com</font><p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="left">
-			<font face="Consolas">Mob.No:+91-9177466875, +91-83319-16875</font><p style="text-indent: 1px; margin-right: 1px; margin-top: 0; margin-bottom: 2px" align="left">
-			<font face="Consolas">Personal Webpage: 
-			<a href="https://digitalct.github.io/">https://digitalct.github.io/</a></font></b></b><p style="margin-top: 0; margin-bottom: 2px">
-<b><font face="Consolas" color="#0000FF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</font></b></p>
-<p style="margin-top: 0; margin-bottom: 2px">
-<font face="Consolas" color="#0000FF"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</b></font></p>
+<p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
+<p style="margin-top: 0; margin-bottom: 0"><b><font face="Times New Roman">
+CHENGAPPA THUMISI</font></b></p>
+<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">Senior 
+Technical Superintendent</font></p>
+<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">
+Department of Physics</font></p>
+<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">Indian 
+Institute of Technology Hyderabad</font></p>
+<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">E-mail:
+<a href="mailto:chengappa.thumisi@phy.iith.ac.in">
+chengappa.thumisi@phy.iith.ac.in</a></font></p>
+<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="mailto:chengappa.thumisi@gmail.com">chengappa.thumisi@gmail.com</a></font></p>
+<p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
+<p style="margin-top: 0; margin-bottom: 0"><b><font face="Times New Roman">
+Academic Information:</font></b></p>
+<ul>
+	<li>
+	<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">M.Sc. 
+	in Physics, Condensed Matter Physics from Sri Venkateswara University, 
+	Tirupati, Andhra Pradesh, India.</font></li>
+	<li>
+	<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">
+	B.Sc. in Mathematics, Physics and Chemistry from Sri Venkateswara 
+	University, Tirupati, Andhra Pradesh, India.</font></li>
+</ul>
+<p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
+
 </body>
 
 </html>
