--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <b style="font-weight: normal" id="docs-internal-guid-bad665c8-7fff-7914-00f7-e3624df0b0f18">
 <p style="margin-top: 0; margin-bottom: 2px" align="left"><b>
 <p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
+			</b>
 <p style="margin-top: 0; margin-bottom: 0"><b><font face="Times New Roman">
 CHENGAPPA THUMISI</font></b></p>
 <p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">Senior 
@@ -30,9 +31,11 @@ Institute of Technology Hyderabad</font></p>
 chengappa.thumisi@phy.iith.ac.in</a></font></p>
 <p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="mailto:chengappa.thumisi@gmail.com">chengappa.thumisi@gmail.com</a></font></p>
+<b>
 <p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
-<p style="margin-top: 0; margin-bottom: 0"><b><font face="Times New Roman">
-Academic Information:</font></b></p>
+<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">
+Academic Information:</font></p>
+</b>
 <ul>
 	<li>
 	<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">M.Sc. 
@@ -43,6 +46,8 @@ Academic Information:</font></b></p>
 	B.Sc. in Mathematics, Physics and Chemistry from Sri Venkateswara 
 	University, Tirupati, Andhra Pradesh, India.</font></li>
 </ul>
+<b>
+<b>
 <p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
 
 </body>
