--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>CT</title>
+<title>CT_Mainpage</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 <p style="margin-top: 0; margin-bottom: 2px" align="left"><b>
 <p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
 			</b>
-<p style="margin-top: 0; margin-bottom: 0"><b><font face="Times New Roman">
+<p style="margin-top: 0; margin-bottom: 0"><b><font face="Times New Roman"></b>
 CHENGAPPA THUMISI</font></b></p>
 <p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">Senior 
 Technical Superintendent</font></p>
