--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@ Academic Information:</font></p>
 	B.Sc. in Mathematics, Physics and Chemistry from Sri Venkateswara 
 	University, Tirupati, Andhra Pradesh, India.</font></li>
 </ul>
+	<h2>Books</h2>
+<p><a href="https://ctwellthify.github.io/">Books</a></p>
+<p><a href="/css/default.asp">Usefu URL's</a></p>
+	<h2>Photography</h2>
+<p><a href="https://www.w3.org/" target="_blank">Personal</a></p>
+<p><a href="https://www.google.com/" target="_blank">Professional</a></p>
+
+<h2>Videography</h2>
+<p><a href="html_images.asp">Personal</a></p>
+<p><a href="/css/default.asp">Professional</a></p>
 <b>
 <b>
 <p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
