--- a/index.html
+++ b/index.html
@@ -20,15 +20,6 @@
 			</b>
 <p style="margin-top: 0; margin-bottom: 0"><b><font face="Times New Roman"></b>
 CHENGAPPA THUMISI</font></b></p>
-<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">Senior 
-Technical Superintendent</font></p>
-<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">
-Department of Physics</font></p>
-<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">Indian 
-Institute of Technology Hyderabad</font></p>
-<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">E-mail:
-<a href="mailto:chengappa.thumisi@phy.iith.ac.in">
-chengappa.thumisi@phy.iith.ac.in</a></font></p>
 <p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="mailto:chengappa.thumisi@gmail.com">chengappa.thumisi@gmail.com</a></font></p>
 <b>
@@ -48,7 +39,7 @@ Academic Information:</font></p>
 </ul>
 	<h2>Books</h2>
 <p><a href="https://ctwellthify.github.io/">Books</a></p>
-<p><a href="/css/default.asp">Usefu URL's</a></p>
+<p><a href="/https://ct2025.github.io/">Usefu URL's</a></p>
 	<h2>Photography</h2>
 <p><a href="https://www.w3.org/" target="_blank">Personal</a></p>
 <p><a href="https://www.google.com/" target="_blank">Professional</a></p>
