--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Academic Information:</font></p>
 </ul>
 	<h2>Books</h2>
 <p><a href="https://ctwellthify.github.io/">Books</a></p>
-<p><a href="/https://ct2025.github.io/">Usefu URL's</a></p>
+<p><a href="https://ct2025.github.io/">Usefu URL's</a></p>
 	<h2>Photography</h2>
 <p><a href="https://www.w3.org/" target="_blank">Personal</a></p>
 <p><a href="https://www.google.com/" target="_blank">Professional</a></p>
