--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Academic Information:</font></p>
 <p><a href="https://ct2025.github.io/">Usefu URL's</a></p>
 	<h2>Photography</h2>
 <p><a href="https://www.w3.org/" target="_blank">Personal</a></p>
-<p><a href="https://www.google.com/" target="_blank">Professional</a></p>
+<p><a href="https://https://chengappagithub.github.io//" target="_blank">Professional</a></p>
 <h2>Videography</h2>
 <p><a href="html_images.asp">Personal</a></p>
 <p><a href="/css/default.asp">Professional</a></p>
