--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</b>
 <p style="margin-top: 0; margin-bottom: 0"><b><font face="Times New Roman"></b>
 CHENGAPPA THUMISI</font></b></p>
-<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">
 <a href="mailto:chengappa.thumisi@gmail.com">chengappa.thumisi@gmail.com</a></font></p>
 <ul>
 	</ul>
