--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <p style="margin-top: 0; margin-bottom: 2px" align="left"><b>
 <p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
 			</b>
-<p style="margin-top: 0; margin-bottom: 0"><b><font face="Times New Roman"></b>
+<p style="margin-top: 0; margin-bottom: 0"><b><font face="Segeo UI"></b>
 CHENGAPPA THUMISI</font></b></p>
-<p style="margin-top: 0; margin-bottom: 0"><font face="Times New Roman">
+<p style="margin-top: 0; margin-bottom: 0"><font face="Segeo UI">
 <a href="mailto:chengappa.thumisi@gmail.com">chengappa.thumisi@gmail.com</a></font></p>
 <ul>
 	</ul>
