--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ CHENGAPPA THUMISI</font></b></p>
 <a href="mailto:chengappa.thumisi@gmail.com">chengappa.thumisi@gmail.com</a></font></p>
 <ul>
 	</ul>
-	<h2>Books</h2>
-<p><a href="https://ctwellthify.github.io/">Books</a></p>
-<p><a href="https://ct2025.github.io/">Usefu URL's</a></p>
+	<h2>Books</h2><font face="Segoe UI">
+<p><a href="https://ctwellthify.github.io/">Books</a></p><font face="Segoe UI">
+<p><a href="https://ct2025.github.io/">Usefu URL's</a></p><font face="Segoe UI">
 	
 
 </body>
