--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <html>
-
 <head>
 <meta charset="utf-8">
-<meta http-equiv="Content-Language" content="en-us">
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <title>CT Mainpage</title>
+<style>
+  body {
+    font-family: "Segoe UI", Arial, sans-serif;
+    color: #000;
+  }
+
+  a {
+    color: #0000FF;
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+</style>
 </head>
 
 <body>
+  <p align="left">
+    <img src="images/CT.jpeg" width="224" height="225" align="middle" alt="CT Logo">
+  </p>
 
-			<p align="left">
-			<font color="#0000FF">
-			<b style="font-weight: normal" id="docs-internal-guid-bad665c8-7fff-7914-00f7-e3624df0b0f16">
-			<img border="0" src="images/CT.jpeg" width="224" height="225" align="middle"></b></font></p>
-<b style="font-weight: normal" id="docs-internal-guid-bad665c8-7fff-7914-00f7-e3624df0b0f17">
-<b style="font-weight: normal" id="docs-internal-guid-bad665c8-7fff-7914-00f7-e3624df0b0f18">
-<p style="margin-top: 0; margin-bottom: 2px" align="left"><b>
-<p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
-			</b>
-<p style="margin-top: 0; margin-bottom: 0"><b><font face="Segoe UI"></b>
-CHENGAPPA THUMISI</font></b></p>
-<p style="margin-top: 0; margin-bottom: 0"><font face="Segoe UI">
-<a href="mailto:chengappa.thumisi@gmail.com">chengappa.thumisi@gmail.com</a></font></p>
-<ul>
-	</ul>
-	<p><a href="https://ctwellthify.github.io/">Books</a></p><font face="Segoe UI">
-<p><a href="https://ct2025.github.io/">Useful URL's</a></p><font face="Segoe UI">
-	
+  <p><b>CHENGAPPA THUMISI</b></p>
+  <p><a href="mailto:chengappa.thumisi@gmail.com">chengappa.thumisi@gmail.com</a></p>
 
+  <p><a href="https://ctwellthify.github.io/">Books</a></p>
+  <p><a href="https://ct2025.github.io/">Useful URLs</a></p>
 </body>
-
 </html>
