--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
 <title>CT Mainpage</title>
-<style>
-  body {
-    font-family: "Segoe UI", Arial, sans-serif;
-    color: #000;
-  }
-
-  a {
-    color: #0000FF;
-    text-decoration: none;
-  }
-
-  a:hover {
-    text-decoration: underline;
-  }
-</style>
 </head>
 
-<body>
+<body style="font-family: 'Segoe UI', Arial, sans-serif; background-color: #ffffff;">
+
   <p align="left">
     <img src="images/CT.jpeg" width="224" height="225" align="middle" alt="CT Logo">
   </p>
 
-  <p><b>CHENGAPPA THUMISI</b></p>
-  <p><a href="mailto:chengappa.thumisi@gmail.com">chengappa.thumisi@gmail.com</a></p>
+  <p style="color: #000080; font-size: 20px;"><b>CHENGAPPA THUMISI</b></p>
+  <p style="color: #0066cc; font-size: 16px;">
+    <a href="mailto:chengappa.thumisi@gmail.com" style="color: #0066cc; text-decoration: none;">
+      chengappa.thumisi@gmail.com
+    </a>
+  </p>
 
-  <p><a href="https://ctwellthify.github.io/">Books</a></p>
-  <p><a href="https://ct2025.github.io/">Useful URLs</a></p>
+  <p style="color: #009933; font-size: 18px;">
+    <a href="https://ctwellthify.github.io/" style="color: #009933; text-decoration: none;">Books</a>
+  </p>
+
+  <p style="color: #cc6600; font-size: 18px;">
+    <a href="https://ct2025.github.io/" style="color: #cc6600; text-decoration: none;">Useful URLs</a>
+  </p>
+
 </body>
 </html>
