--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </p>
 
   <p style="color: #cc6600; font-size: 18px;">
-    <a href="https://ct2025.github.io/" style="color: #cc6600; text-decoration: none;">Useful URLs</a>
+    <a href="https://www.google.com/" style="color: #cc6600; text-decoration: none;">Useful URLs</a>
   </p>
 
 </body>
